--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\DesktopController.cs" />
      <Compile Include="Assets\MainCamera.cs" />
      <Compile Include="Assets\MissionsManager.cs" />
      <Compile Include="Assets\Scripts\ApplicationsManager.cs" />
